plugins {
	id 'java'
}

group = 'com.rinha'
version = '0.0.1'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	maxHeapSize = "4g"
	jvmArgs(
		'--add-modules', 'jdk.incubator.vector',
		'-Xss2m'
	)
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

jar {
	manifest {
		attributes 'Main-Class': 'com.rinha.frauddetector.Application'
	}
}
